ajout du layout sur les templates User

--- a/src/Presta/AskeetBundle/Resources/views/User/new.html.twig
+++ b/src/Presta/AskeetBundle/Resources/views/User/new.html.twig
@@ -1,7 +1,11 @@
-<h1>Formulaire d'inscription</h1>
+{% extends '::base.html.twig' %}
 
-<form action="{{ path('user_new') }}" method="post" {{ form_enctype(form) }}>
-    {{ form_widget(form) }}
-
-    <input type="submit" value="S'inscrire" />
-</form>
+{% block body %}
+	<h1>Formulaire d'inscription</h1>
+	
+	<form action="{{ path('user_new') }}" method="post" {{ form_enctype(form) }}>
+	    {{ form_widget(form) }}
+	
+	    <input type="submit" value="S'inscrire" />
+	</form>
+{% endblock %}
