--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,7 +6,10 @@
         {% block stylesheets %}{% endblock %}
         <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" />
     </head>
-    <body>
+    <body style="width: 600px; margin:auto;">
+    	<header>
+    		<p><a href="{{ path('homepage') }}">Askeet</a></p>
+    	</header>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
